test/compilable/dtoh_cpp98_compat.d
/*
REQUIRED_ARGS: -extern-std=c++98 -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <stddef.h>
#include <stdint.h>


struct Null
{
    void* field;
    Null() :
        field(NULL)
    {
    }
};

extern void* typeof_null;

extern void* inferred_null;

---
*/

extern (C++) struct Null
{
    void* field = null;
}

extern (C++) __gshared typeof(null) typeof_null = null;
extern (C++) __gshared inferred_null = null;
